# SynarixAggregator

./: LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.py
docs/: aggregator_functions.md  ierc20_functions.md  index.md
examples/: 01_getName.py  02_getPrice.py  03_editSettings.py  04_makeSwaps.py
synarixaggregator/: IERC20.py  SynarixAC_F.py  SynarixAM.py  W3Utils.py  __init__.py  core_abis.py  core_settings.py
