[tool.poetry]
name = "synarixaggregator"
version = "0.0.2"
description = "SynarixAggregator provide Simple use of Blockchain data."
authors = ["Synarix@protonmail.com"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.4"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
